# lucy

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  dist-workspace.toml  logo.txt  release-plz.toml  rustfmt.toml
.github/workflows/: ci.yml  publish-crate.yml  release.yml  version-bump.yml
adr/: README.md  index.yaml
adr/records/harness/: agent-boundary-and-protocol.md  command-execution.md  configuration-and-provider.md  session-and-context-lifecycle.md
site/: index.html
src/: app.rs  auth.rs  cancellation.rs  codex_provider.rs  command.rs  config.rs  context.rs  lib.rs  main.rs  model.rs  protocol.rs  provider.rs  redaction.rs  session.rs  tui.rs
tests/: cli.rs
