[package]
name = "lucy"
version = "0.1.0"
edition = "2021"
description = "A small local JSONL agent harness"
license = "MIT"

[dependencies]
libc = "0.2"
crossterm = "0.29"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt", "time"] }
unicode-width = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
