[package]
name = "lucy-cli"
version = "1.4.0"
edition = "2021"
description = "A small local JSONL agent harness"
homepage = "https://github.com/jwoo0122/lucy"
license = "MIT"
repository = "https://github.com/jwoo0122/lucy"

[[bin]]
name = "lucy"
path = "src/main.rs"

[lib]
name = "lucy"
path = "src/lib.rs"

[package.metadata.dist]
formula = "lucy"

[dependencies]
libc = "0.2"
crossterm = "0.29"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt", "time"] }
unicode-width = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
