[package]
name = "lucy-cli"
version = "1.5.2"
edition = "2021"
description = "A small local JSONL agent harness"
homepage = "https://github.com/jwoo0122/lucy"
license = "MIT"
repository = "https://github.com/jwoo0122/lucy"

[[bin]]
name = "lucy"
path = "src/main.rs"

[lib]
name = "lucy"
path = "src/lib.rs"

[package.metadata.dist]
formula = "lucy"

[dependencies]
libc = "0.2"
crossterm = "0.29"
image = { version = "0.25.10", default-features = false, features = ["png"] }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt", "time"] }
unicode-width = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
